minor layout bug fixes

--- a/CoffinSight/css/home-page.css
+++ b/CoffinSight/css/home-page.css
@@ -543,7 +543,7 @@
 .home-page .icon_20_in-aFziMi {
   background-color: transparent;
   height: 20px;
-  left: 116px;
+  left: 127px;
   position: absolute;
   top: 4px;
   width: 20px;
