--- a/CoffinSight/css/story-in-detail-1.css
+++ b/CoffinSight/css/story-in-detail-1.css
@@ -1097,7 +1097,7 @@
   height: 15px;
   left: 0px;
   position: relative;
-  top: 0px;
+  top: 20px;
   width: 163px;
 }
 
