--- a/CoffinSight/css/story-in-detail.css
+++ b/CoffinSight/css/story-in-detail.css
@@ -990,7 +990,7 @@
   height: 15px;
   left: 0px;
   position: relative;
-  top: 0px;
+  top: 20px;
   width: 163px;
 }
 
